package com.mbs.domain;

/**
 * Created by hhuang on 6/29/17.
 */
public class User extends AudibleEntity {
}
